# Effective-Modern-Cpp

./: .gitignore  CMakeLists.txt
Item01_Understand_template_type_deduction/: 01-pinch_of_pseudocode.cpp  02-case1_const.cpp  02-case1_non_const.cpp  04-case1_pointer.cpp  05-case2_uref.cpp  06-case3_pass_by_value.cpp  07-array-to-pointer_decay_rule.cpp  08-arrays_by_value.cpp  09-arrays_by_reference.cpp  10-deduce_nb_array_elements.cpp  10-function-to-pointer_decay_rule.cpp  11-deduce_nb_array_elements.cpp  11-function-to-pointer_decay_rule.cpp  12-array_and_pointer_parameter_equivalence.cpp  13-things_to_remember.rst  CMakeLists.txt  array-to-pointer_decay_rule.cpp  array_and_pointer_parameter_equivalence.cpp  arrays_by_value.cpp  case1_const.cpp  case1_non_const.cpp  case2_uref.cpp  deduce_nb_array_elements.cpp  pinch_of_pseudocode.cpp
Item02_Understand_auto_type_deduction/: 1-auto_type_deduction.cpp  2-auto_deduction_vs_template_deduction.cpp  3-function_return_type_deduction.cpp  4-things_to_remember.rst  CMakeLists.txt  auto_deduction_vs_template_deduction.cpp  auto_type_deduction.cpp  function_return_type_deduction.cpp
Item04_Know_how_to_view_deduced_types/: CMakeLists.txt  boost_type_index.cpp  compiler_diagnostics.cpp  runtime_output01.cpp  runtime_output02.cpp
Item06_Use_the_explicitly_typed_initializer_idiom_when_auto_deduces_undesired_types/: CMakeLists.txt  explicitly_typed_initializer_idiom.cpp  invisible_proxy_types.cpp  matrix_example.cpp
Item07_Distinguish_between()_and_{}_when_creating_objects/: CMakeLists.txt  empty_braces.cpp  empty_braces_test_v1.cpp  empty_braces_test_v2.cpp  initialization_values.cpp  initializer_lists1.cpp  initializer_lists2.cpp  initializer_lists3.cpp  initializer_lists4.cpp  parenthesis_braces_in_templates.cpp  vector_construction.cpp
Item08_Prefer_nullptr_to_0_and_NULL/: CMakeLists.txt  code_clarity.cpp  pointer_overload.cpp  template_example_flat.cpp  template_example_templatized.cpp  template_example_templatized_cpp14.cpp
Item12_Declare_overriding_functions_override/: CMakeLists.txt  override_games.cpp  override_legacy_code.cpp  overriding_explained.cpp  reference-qualified_member_functions_use_case_problem_demonstration.cpp  reference-qualified_member_functions_use_case_problem_solution.cpp  reference_qualifiers_example.cpp  typical_errors.cpp  typical_errors_corrected.cpp  typical_errors_with_override_added.cpp
Item15_Use_constexpr_whenever_possible/: CMakeLists.txt  Point_cpp11.h  Point_cpp14.h  constexpr_functions_cpp11.cpp  constexpr_functions_cpp14.cpp  constexpr_user-defined_types_cpp11.cpp  constexpr_user-defined_types_cpp14.cpp  constexpr_variables.cpp
Item16_Make_const_member_functions_thread-safe/: CMakeLists.txt  Point.cpp  Polynomial1.h  Polynomial2.h  Polynomial_with_mutex.h  Widget1.h  Widget2.h  Widget3.h  expensive_int.cpp  undefined_behavior.cpp
Item19_Use_std_shared_ptr_for_shared-ownership_resource_management/: CMakeLists.txt  Widget.h  multiple_control_blocks1.cpp  multiple_control_blocks2.cpp  shared_ptr_things_to_know.cpp
Item21_Prefer_std_make_unique_and_std_make_shared_to_direct_use_of_new/: CMakeLists.txt  limitations_of_make_functions.cpp  reasons_for_preferring_make_functions.cpp  selfwritten_make_unique.cpp
Item23_Understand_std_move_and_std_forward/: CMakeLists.txt  annotation.cpp  move_constructor_with_forward.cpp  move_constructor_with_move.cpp  std_move_in_cpp11.cpp  std_move_in_cpp14.cpp  typical_use_of_std_forward.cpp  typical_use_of_std_forward.h
Item24_Distinguish_universal_references_from_rvalue_references/: CMakeLists.txt  no_type_deduction.cpp  record_time.cpp  rrefs_examples.cpp  urefs_contexts.cpp  urefs_form.cpp  urefs_initialization.cpp
Item25_Use_std_move_on_rvalue_references_std_forward_on_universal_references/: CMakeLists.txt  dont_use_move_with_urefs.cpp  dont_use_move_with_urefs_solution.cpp  matrix.cpp  move_or_forward_only_on_final_use.cpp  reduce_and_copy.cpp  return_value_optimization.cpp  rrefs_are_moveable.cpp  urefs_maybe_moveable.cpp
Item26_Avoid_overloading_on_universal_references/: CMakeLists.txt  Person.cpp  logAndAdd_inefficient.cpp  logAndAdd_with_uref.cpp  logAndAdd_with_uref_overloaded.cpp
Item27_Familiarize_yourself_with_alternatives_to_overloading_on_universal_references/: CMakeLists.txt  alternative_pass_by_value.cpp  constraining_templates01.cpp  constraining_templates02_cpp11.cpp  constraining_templates02_cpp14.cpp  constraining_templates03_cpp14.cpp  constraining_templates04_cpp14.cpp  tag_dispatch01.cpp  tag_dispatch02.cpp
Item28_Understand_reference_collapsing/: CMakeLists.txt  conceptual_std_forward_implementation_cpp11.h  conceptual_std_forward_implementation_cpp14.h  reference_collapsing_contexts01.cpp  reference_collapsing_contexts01.h  reference_collapsing_contexts02.cpp  reference_collapsing_contexts02.h  refs_to_refs.cpp  std_forward_common_usecase.h
Item30_Familiarize_yourself_with_perfect_forwarding_failure_cases/: CMakeLists.txt  bitfields.cpp  braced_initializers.cpp  core_of_forwarding.h  declaration-only_integral_static_const_data_members.cpp  null_pointers.cpp  overloaded_function_names_and_template_names.cpp
Item32_Use_init_capture_to_move_objects_into_closures/: CMakeLists.txt  Widget.h  init_capture_cpp11.cpp  init_capture_cpp14.cpp  move_capture1_cpp11.cpp  move_capture1_cpp14.cpp  move_capture2.cpp
Item34_Prefer_lambdas_to_std_bind/: CMakeLists.txt  alarm_with_lambda_and_overload_cpp14.cpp  alarm_with_lambda_cpp11.cpp  alarm_with_lambda_cpp14.cpp  alarm_with_std_bind_and_overload_cpp14.cpp  alarm_with_std_bind_cpp11.cpp  alarm_with_std_bind_cpp14.cpp  alarm_with_std_bind_incorrect.cpp  between_with_lambda_cpp11.cpp  between_with_lambda_cpp14.cpp  between_with_std_bind_cpp11.cpp  between_with_std_bind_cpp14.cpp  compress.h  compress_with_lambda.cpp  compress_with_std_bind.cpp  polymorphic_function_objects_with_lambda_cpp14.cpp  polymorphic_function_objects_with_std_bind.cpp
Item35_Prefer_task-based_programming_to_thread-based/: CMakeLists.txt  software_threads.cpp  task_based_approach.cpp  (+1 more)
docs/: Makefile  (+12 more)
(+104 files in other folders)
