add_executable(1-auto_type_deduction 1-auto_type_deduction.cpp)
target_compile_features(1-auto_type_deduction PUBLIC cxx_std_11)

add_executable(2-auto_deduction_vs_template_deduction 2-auto_deduction_vs_template_deduction.cpp)
target_compile_features(2-auto_deduction_vs_template_deduction PUBLIC cxx_std_11)

add_executable(3-function_return_type_deduction 3-function_return_type_deduction.cpp)
target_compile_features(3-function_return_type_deduction PUBLIC cxx_std_14)
