add_executable(initialization_values initialization_values.cpp)
target_compile_features(initialization_values PUBLIC cxx_std_11)
add_executable(initializer_lists1 initializer_lists1.cpp)
target_compile_features(initializer_lists1 PUBLIC cxx_std_11)
add_executable(initializer_lists2 initializer_lists2.cpp)
target_compile_features(initializer_lists2 PUBLIC cxx_std_11)
add_executable(initializer_lists3 initializer_lists3.cpp)
target_compile_features(initializer_lists3 PUBLIC cxx_std_11)
add_executable(initializer_lists4 initializer_lists4.cpp)
target_compile_features(initializer_lists4 PUBLIC cxx_std_11)
add_executable(empty_braces empty_braces.cpp)
target_compile_features(empty_braces PUBLIC cxx_std_11)
add_executable(empty_braces_test_v1 empty_braces_test_v1.cpp)
target_compile_features(empty_braces_test_v1 PUBLIC cxx_std_11)
add_executable(empty_braces_test_v2 empty_braces_test_v2.cpp)
target_compile_features(empty_braces_test_v2 PUBLIC cxx_std_11)
add_executable(vector_construction vector_construction.cpp)
target_compile_features(vector_construction PUBLIC cxx_std_11)
add_executable(parenthesis_braces_in_templates parenthesis_braces_in_templates.cpp)
target_compile_features(parenthesis_braces_in_templates PUBLIC cxx_std_11)
