add_executable(overriding_explained overriding_explained.cpp)
target_compile_features(overriding_explained PUBLIC cxx_std_14)

add_executable(reference_qualifiers_example reference_qualifiers_example.cpp)
target_compile_features(reference_qualifiers_example PUBLIC cxx_std_11)

add_library(typical_errors typical_errors.cpp)
target_compile_features(typical_errors PUBLIC cxx_std_11)

add_library(typical_errors_with_override_added typical_errors_with_override_added.cpp)
target_compile_features(typical_errors_with_override_added PUBLIC cxx_std_11)

add_library(typical_errors_corrected typical_errors_corrected.cpp)
target_compile_features(typical_errors_corrected PUBLIC cxx_std_11)

add_library(override_legacy_code override_legacy_code.cpp)

add_library(override_games override_games.cpp)
target_compile_features(override_games PUBLIC cxx_std_11)

add_executable(reference-qualified_member_functions_use_case_problem_demonstration reference-qualified_member_functions_use_case_problem_demonstration.cpp)
target_compile_features(reference-qualified_member_functions_use_case_problem_demonstration PUBLIC cxx_std_11)

add_executable(reference-qualified_member_functions_use_case_problem_solution reference-qualified_member_functions_use_case_problem_solution.cpp)
target_compile_features(reference-qualified_member_functions_use_case_problem_solution PUBLIC cxx_std_11)
