add_executable(constexpr_variables constexpr_variables.cpp)
target_compile_features(constexpr_variables PUBLIC cxx_std_11)

add_executable(constexpr_functions_cpp11 constexpr_functions_cpp11.cpp)
target_compile_features(constexpr_functions_cpp11 PUBLIC cxx_std_11)

add_executable(constexpr_functions_cpp14 constexpr_functions_cpp14.cpp)
target_compile_features(constexpr_functions_cpp14 PUBLIC cxx_std_14)

add_executable(constexpr_user-defined_types_cpp11 constexpr_user-defined_types_cpp11.cpp)
target_compile_features(constexpr_user-defined_types_cpp11 PUBLIC cxx_std_11)

add_executable(constexpr_user-defined_types_cpp14 constexpr_user-defined_types_cpp14.cpp)
target_compile_features(constexpr_user-defined_types_cpp14 PUBLIC cxx_std_14)
