add_executable(reasons_for_preferring_make_functions reasons_for_preferring_make_functions.cpp)
target_compile_features(reasons_for_preferring_make_functions PUBLIC cxx_std_14)

# add_executable(limitations_of_make_functions limitations_of_make_functions.cpp)
# target_compile_features(limitations_of_make_functions PUBLIC cxx_std_14)
