#include_directories(../../utils)

add_executable(refs_to_refs1 refs_to_refs.cpp)

add_executable(reference_collapsing_contexts01 reference_collapsing_contexts01.cpp)
target_compile_features(reference_collapsing_contexts01 PUBLIC cxx_std_11)

add_executable(reference_collapsing_contexts02 reference_collapsing_contexts02.cpp)
target_compile_features(reference_collapsing_contexts02 PUBLIC cxx_std_11)
