add_executable(init_capture_cpp14 init_capture_cpp14.cpp)
target_compile_features(init_capture_cpp14 PUBLIC cxx_std_14)
add_executable(init_capture_cpp11 init_capture_cpp11.cpp Widget.cpp)
target_compile_features(init_capture_cpp11 PUBLIC cxx_std_14)
add_executable(move_capture1_cpp14 move_capture1_cpp14.cpp)
target_compile_features(move_capture1_cpp14 PUBLIC cxx_std_14)
add_executable(move_capture1_cpp11 move_capture1_cpp11.cpp)
target_compile_features(move_capture1_cpp11 PUBLIC cxx_std_11)
add_executable(move_capture2 move_capture2.cpp)
target_compile_features(move_capture2 PUBLIC cxx_std_14)

