add_executable(default_launch_policy default_launch_policy.cpp)
target_compile_features(default_launch_policy PUBLIC cxx_std_11)
target_link_libraries(default_launch_policy ${CMAKE_THREAD_LIBS_INIT})

add_executable(guaranteeing_truly_asynchronous_execution guaranteeing_truly_asynchronous_execution.cpp)
target_compile_features(guaranteeing_truly_asynchronous_execution PUBLIC cxx_std_11)
target_link_libraries(guaranteeing_truly_asynchronous_execution ${CMAKE_THREAD_LIBS_INIT})

add_executable(interesting_implications interesting_implications.cpp)
target_compile_features(interesting_implications PUBLIC cxx_std_11)
target_link_libraries(interesting_implications ${CMAKE_THREAD_LIBS_INIT})

add_executable(really_async_cpp11 really_async_cpp11.cpp)
target_compile_features(really_async_cpp11 PUBLIC cxx_std_11)
target_link_libraries(really_async_cpp11 ${CMAKE_THREAD_LIBS_INIT})

add_executable(really_async_cpp14 really_async_cpp14.cpp)
target_compile_features(really_async_cpp14 PUBLIC cxx_std_14)
target_link_libraries(really_async_cpp14 ${CMAKE_THREAD_LIBS_INIT})

add_executable(thread_local_storage thread_local_storage.cpp)
target_compile_features(thread_local_storage PUBLIC cxx_std_11)
target_link_libraries(thread_local_storage ${CMAKE_THREAD_LIBS_INIT})

add_executable(wait-based_loops wait-based_loops.cpp)
target_compile_features(wait-based_loops PUBLIC cxx_std_14)
target_link_libraries(wait-based_loops ${CMAKE_THREAD_LIBS_INIT})

add_executable(wait-based_loops_fixed wait-based_loops_fixed.cpp)
target_compile_features(wait-based_loops_fixed PUBLIC cxx_std_14)
target_link_libraries(wait-based_loops_fixed ${CMAKE_THREAD_LIBS_INIT})
